--- a/notes_backend/package.json
+++ b/notes_backend/package.json
@@ -14,7 +14,11 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "sequelize": "^6.32.1",
+        "mysql2": "^3.4.4",
+        "bcrypt": "^5.1.0",
+        "jsonwebtoken": "^9.0.2"
     },
     "devDependencies": {
         "eslint": "^9.24.0",
